# domain/model/user.go
@@ -1,8 +1,18 @@
 package model
 
 type User struct {
-	Name    string
-	Height  float32
-	Gender  int8
-	DateNum int64
+	ID            string
+	Name          string
+	Height        float32
+	Gender        GenderEnum
+	DateNum       int64
+	MatchUserList []string
 }
+
+type GenderEnum int8
+
+const (
+	None GenderEnum = iota
+	Men
+	Woman
+)
